[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/allies/alive/Alice/1.png" type="Texture" id=1]
[ext_resource path="res://sprites/allies/alive/Alice/shoot1.png" type="Texture" id=2]
[ext_resource path="res://sprites/allies/alive/Alice/shoot2.png" type="Texture" id=3]
[ext_resource path="res://sprites/allies/alive/Alice/0.png" type="Texture" id=4]
[ext_resource path="res://sprites/allies/alive/Alice/2.png" type="Texture" id=5]
[ext_resource path="res://sprites/allies/alive/Alice/3.png" type="Texture" id=6]
[ext_resource path="res://sprites/allies/alive/Alice/shoot0.png" type="Texture" id=7]
[ext_resource path="res://sprites/allies/alive/Alice/dead.png" type="Texture" id=8]
[ext_resource path="res://sprites/allies/alive/Alice/dead1.png" type="Texture" id=9]
[ext_resource path="res://sprites/allies/alive/Alice/dead0.png" type="Texture" id=10]
[ext_resource path="res://sprites/allies/alive/Alice/dead2.png" type="Texture" id=11]
[ext_resource path="res://sprites/allies/alive/Alice/dead3.png" type="Texture" id=12]
[ext_resource path="res://scripts/Alice.gd" type="Script" id=13]
[ext_resource path="res://sprites/allies/alive/Alice/dodge.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 28 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "Shoot",
"speed": 12.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 8 ) ],
"loop": false,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ) ],
"loop": true,
"name": "Dodge",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 24 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 85, 34 )

[node name="Alice" type="KinematicBody2D"]
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[node name="AliceAnimation" type="AnimatedSprite" parent="."]
position = Vector2( -2, 0 )
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="DodgeShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -3, 10 )
shape = SubResource( 3 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )
[connection signal="animation_finished" from="AliceAnimation" to="." method="_on_AliceAnimation_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
